--- a/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
+++ b/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2b70439",
+   "id": "eed48c66",
    "metadata": {},
    "source": [
     "# 1. Create a data folder in your local project repository.\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad5bf1c4",
+   "id": "1529d28b",
    "metadata": {},
    "source": [
     "# 3) Import the required packages with their customary aliases as follows:\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "24a8a6c3",
+   "id": "587bdbd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e9f844",
+   "id": "3e1bd121",
    "metadata": {},
    "source": [
     "# 4. Use the %matplotlib inline magic command so that your plots show in the notebook without having to call plt.show() every time."
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5f63af5",
+   "id": "f0c17d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed29616",
+   "id": "3f601cb8",
    "metadata": {},
    "source": [
     "# 5. Using the pandas read_csv() method, read the GDP dataset into your notebook as a DataFrame called gdp_df. Take a look at the first 6 rows."
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8b654e07",
+   "id": "4257b3c2",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03f4ad1e",
+   "id": "47959e56",
    "metadata": {},
    "source": [
     "# 6.Repeat for the internet use dataset. Call this DataFrame internet_df. Take a look at the first six rows."
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9ac149fb",
+   "id": "2d84af85",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3f6dfb7",
+   "id": "db76a052",
    "metadata": {},
    "source": [
     "# 7.Look at the shape of each DataFrame - how many rows? How many columns?"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "044bc5b0",
+   "id": "54587e4d",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "36e1cd70",
+   "id": "2f6bc371",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83fc237f",
+   "id": "97058dc6",
    "metadata": {},
    "source": [
     "# 8.Take a look at the datatypes for the columns in each DataFrame."
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "673d7a0c",
+   "id": "adf5ac09",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c026afe0",
+   "id": "884e2152",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "661c8e61",
+   "id": "e9552889",
    "metadata": {},
    "source": [
     "# 9. Take a look at the last 10 rows of each DataFrame in turn."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cb778a27",
+   "id": "721f9cb7",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "18a2d573",
+   "id": "e65c4835",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66e3be7",
+   "id": "3cddc50b",
    "metadata": {},
    "source": [
     "# 10. Drop the value footnotes column from both DataFrames. Check that this worked as expected."
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ed12d589",
+   "id": "2ba45823",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "00d6a5b4",
+   "id": "f2eea485",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e891e6b2",
+   "id": "9839b0e9",
    "metadata": {},
    "source": [
     "# 11. Change the columns for the GDP Per Capita DataFrame to ‘Country’, ‘Year’, and ‘GDP_Per_Capita’."
@@ -739,8 +739,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "6bbbc1e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_df.columns = ['Country', 'Year', 'GDP_Per_Capita']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43cc890",
+   "metadata": {},
+   "source": [
+    "# 12.Change the columns for the Internet Users DataFrame to ‘Country’, ‘Year’, and ‘Internet_Users_Pct’"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "30c65358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "internet_df.columns = ['Country', 'Year', 'Internet_Users_Pct']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6ef0cb",
+   "metadata": {},
+   "source": [
+    "# 13. Merge the two DataFrames to one. Merge all rows from each of the two DataFrames. Call the new DataFrame gdp_and_internet_use."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "79f5e474",
+   "id": "a1993736",
    "metadata": {},
    "outputs": [],
    "source": []
