--- a/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
+++ b/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "4257b3c2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "5     Afghanistan  2014  2102.385234              NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "2d84af85",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "5     Afghanistan  2009  3.550000              NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "54587e4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6869, 4)"
+       "(6868, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2f6bc371",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4496, 4)"
+       "(4495, 4)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "adf5ac09",
    "metadata": {},
    "outputs": [
@@ -347,13 +347,13 @@
      "data": {
       "text/plain": [
        "Country or Area     object\n",
-       "Year                object\n",
+       "Year                 int64\n",
        "Value              float64\n",
        "Value Footnotes    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "884e2152",
    "metadata": {},
    "outputs": [
@@ -372,13 +372,13 @@
      "data": {
       "text/plain": [
        "Country or Area     object\n",
-       "Year                object\n",
+       "Year                 int64\n",
        "Value              float64\n",
        "Value Footnotes    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "721f9cb7",
    "metadata": {},
    "outputs": [
@@ -429,6 +429,13 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6858</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>3600.849291</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>6859</th>\n",
        "      <td>Zimbabwe</td>\n",
@@ -492,32 +499,25 @@
        "      <td>3324.348171</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6868</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area      Year        Value  Value Footnotes\n",
-       "6859        Zimbabwe      1998  3653.920016              NaN\n",
-       "6860        Zimbabwe      1997  3580.048793              NaN\n",
-       "6861        Zimbabwe      1996  3520.430146              NaN\n",
-       "6862        Zimbabwe      1995  3226.413930              NaN\n",
-       "6863        Zimbabwe      1994  3263.934978              NaN\n",
-       "6864        Zimbabwe      1993  3033.504852              NaN\n",
-       "6865        Zimbabwe      1992  3054.889178              NaN\n",
-       "6866        Zimbabwe      1991  3426.598094              NaN\n",
-       "6867        Zimbabwe      1990  3324.348171              NaN\n",
-       "6868   footnoteSeqID  Footnote          NaN              NaN"
+       "     Country or Area  Year        Value  Value Footnotes\n",
+       "6858        Zimbabwe  1999  3600.849291              NaN\n",
+       "6859        Zimbabwe  1998  3653.920016              NaN\n",
+       "6860        Zimbabwe  1997  3580.048793              NaN\n",
+       "6861        Zimbabwe  1996  3520.430146              NaN\n",
+       "6862        Zimbabwe  1995  3226.413930              NaN\n",
+       "6863        Zimbabwe  1994  3263.934978              NaN\n",
+       "6864        Zimbabwe  1993  3033.504852              NaN\n",
+       "6865        Zimbabwe  1992  3054.889178              NaN\n",
+       "6866        Zimbabwe  1991  3426.598094              NaN\n",
+       "6867        Zimbabwe  1990  3324.348171              NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "e65c4835",
    "metadata": {},
    "outputs": [
@@ -560,6 +560,13 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4485</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>3.994356</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>4486</th>\n",
        "      <td>Zimbabwe</td>\n",
@@ -623,32 +630,25 @@
        "      <td>0.000000</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4495</th>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area      Year     Value  Value Footnotes\n",
-       "4486        Zimbabwe      2001  0.799846              NaN\n",
-       "4487        Zimbabwe      2000  0.401434              NaN\n",
-       "4488        Zimbabwe      1999  0.161676              NaN\n",
-       "4489        Zimbabwe      1998  0.081648              NaN\n",
-       "4490        Zimbabwe      1997  0.033080              NaN\n",
-       "4491        Zimbabwe      1996  0.016790              NaN\n",
-       "4492        Zimbabwe      1995  0.007684              NaN\n",
-       "4493        Zimbabwe      1994  0.001739              NaN\n",
-       "4494        Zimbabwe      1990  0.000000              NaN\n",
-       "4495   footnoteSeqID  Footnote       NaN              NaN"
+       "     Country or Area  Year     Value  Value Footnotes\n",
+       "4485        Zimbabwe  2002  3.994356              NaN\n",
+       "4486        Zimbabwe  2001  0.799846              NaN\n",
+       "4487        Zimbabwe  2000  0.401434              NaN\n",
+       "4488        Zimbabwe  1999  0.161676              NaN\n",
+       "4489        Zimbabwe  1998  0.081648              NaN\n",
+       "4490        Zimbabwe  1997  0.033080              NaN\n",
+       "4491        Zimbabwe  1996  0.016790              NaN\n",
+       "4492        Zimbabwe  1995  0.007684              NaN\n",
+       "4493        Zimbabwe  1994  0.001739              NaN\n",
+       "4494        Zimbabwe  1990  0.000000              NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "2ba45823",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "f2eea485",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "6bbbc1e0",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "30c65358",
    "metadata": {},
    "outputs": [],
@@ -775,8 +775,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a1993736",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "0     Afghanistan  2019     2065.036398                 NaN\n",
+      "1     Afghanistan  2018     2033.779002                 NaN\n",
+      "2     Afghanistan  2017     2058.383832                 NaN\n",
+      "3     Afghanistan  2016     2057.062164                 NaN\n",
+      "4     Afghanistan  2015     2068.265904                 NaN\n",
+      "...           ...   ...             ...                 ...\n",
+      "7900        Yemen  1999             NaN            0.056629\n",
+      "7901        Yemen  1998             NaN            0.023323\n",
+      "7902        Yemen  1997             NaN            0.015025\n",
+      "7903        Yemen  1996             NaN            0.000621\n",
+      "7904        Yemen  1990             NaN            0.000000\n",
+      "\n",
+      "[7905 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use = pd.merge(gdp_df, internet_df, how=\"outer\", on=[\"Country\", \"Year\"])\n",
+    "print(gdp_and_internet_use)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d91a2444",
+   "metadata": {},
+   "source": [
+    "# <b> 14. Look at the first five rows of your new DataFrame to confirm it merged correctly. </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "34334404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2065.036398</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2033.779002</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2058.383832</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2057.062164</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2068.265904</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+       "0  Afghanistan  2019     2065.036398                 NaN\n",
+       "1  Afghanistan  2018     2033.779002                 NaN\n",
+       "2  Afghanistan  2017     2058.383832                 NaN\n",
+       "3  Afghanistan  2016     2057.062164                 NaN\n",
+       "4  Afghanistan  2015     2068.265904                 NaN"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d84c6a75",
+   "metadata": {},
+   "source": [
+    "# 15. Look at the last five rows to make sure the data is clean and as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "07370940",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7900</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.056629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7901</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.023323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7902</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.015025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7903</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7904</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+       "7900   Yemen  1999             NaN            0.056629\n",
+       "7901   Yemen  1998             NaN            0.023323\n",
+       "7902   Yemen  1997             NaN            0.015025\n",
+       "7903   Yemen  1996             NaN            0.000621\n",
+       "7904   Yemen  1990             NaN            0.000000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0370ed1",
+   "metadata": {},
+   "source": [
+    "# 16. Subset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7d482cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "5               Afghanistan  2014     2102.385234            6.390000\n",
+      "10              Afghanistan  2009     1758.904043            3.550000\n",
+      "15              Afghanistan  2004     1200.278256            0.105809\n",
+      "23                  Albania  2014    11623.866679           60.100000\n",
+      "28                  Albania  2009    10346.864199           41.200000\n",
+      "...                     ...   ...             ...                 ...\n",
+      "7868  Virgin Islands (U.S.)  2009             NaN           27.396510\n",
+      "7873  Virgin Islands (U.S.)  2004             NaN           27.377009\n",
+      "7885                  Yemen  2014             NaN           22.550000\n",
+      "7890                  Yemen  2009             NaN            9.960000\n",
+      "7895                  Yemen  2004             NaN            0.881223\n",
+      "\n",
+      "[830 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sub_gdp_internet = gdp_and_internet_use[gdp_and_internet_use[\"Year\"].isin([2004, 2009, 2014])]\n",
+    "print(sub_gdp_internet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5149b049",
+   "metadata": {},
+   "source": [
+    "#  17. Create three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "04f47c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_internet_2004 = gdp_and_internet_use[gdp_and_internet_use['Year'] == 2004]\n",
+    "gdp_internet_2009 = gdp_and_internet_use[gdp_and_internet_use['Year'] == 2009]\n",
+    "gdp_internet_2014 = gdp_and_internet_use[gdp_and_internet_use['Year'] == 2014]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fa11356",
+   "metadata": {},
+   "source": [
+    "#  18. Which country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options). \n",
+    "Zimbabwe 83.89%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8a3dd091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country                    Zimbabwe\n",
+      "Year                           2004\n",
+      "GDP_Per_Capita        102708.212547\n",
+      "Internet_Users_Pct            83.89\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gdp_internet_2004.max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cec4f07",
+   "metadata": {},
+   "source": [
+    "# 19. Which country had the lowest percentage of internet users in 2014? What was the percentage?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20bec7b4",
    "metadata": {},
    "outputs": [],
    "source": []
