--- a/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
+++ b/Notebook/Gross_Domestic_Product_and_Internet_Usage.ipynb
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a1993736",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d91a2444",
+   "id": "1f51ddbc",
    "metadata": {},
    "source": [
     "# <b> 14. Look at the first five rows of your new DataFrame to confirm it merged correctly. </b>"
@@ -815,8 +815,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "34334404",
+   "execution_count": 16,
+   "id": "fa6153c6",
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +895,7 @@
        "4  Afghanistan  2015     2068.265904                 NaN"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d84c6a75",
+   "id": "6ffefa10",
    "metadata": {},
    "source": [
     "# 15. Look at the last five rows to make sure the data is clean and as expected."
@@ -914,8 +914,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "07370940",
+   "execution_count": 17,
+   "id": "529b1598",
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "7904   Yemen  1990             NaN            0.000000"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0370ed1",
+   "id": "b3382e07",
    "metadata": {},
    "source": [
     "# 16. Subset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly."
@@ -1013,8 +1013,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7d482cbd",
+   "execution_count": 18,
+   "id": "aae84445",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5149b049",
+   "id": "32946468",
    "metadata": {},
    "source": [
     "#  17. Create three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long."
@@ -1053,8 +1053,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "04f47c31",
+   "execution_count": 19,
+   "id": "579997bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,47 +1065,270 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa11356",
+   "id": "a3054576",
    "metadata": {},
    "source": [
-    "#  18. Which country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options). \n",
-    "Zimbabwe 83.89%"
+    "# 18. Which country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options). \n",
+    "Iceland 98.16%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "8a3dd091",
+   "execution_count": 24,
+   "id": "e80df945",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Country                    Zimbabwe\n",
-      "Year                           2004\n",
-      "GDP_Per_Capita        102708.212547\n",
-      "Internet_Users_Pct            83.89\n",
-      "dtype: object\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Country                  Iceland\n",
+       "Year                        2014\n",
+       "GDP_Per_Capita        49652.1495\n",
+       "Internet_Users_Pct         98.16\n",
+       "Name: 2625, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gdp_internet_2004.max())"
+    "gdp_internet_2014.loc[gdp_internet_2014['Internet_Users_Pct'].idxmax()]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2cec4f07",
+   "id": "22e4389d",
    "metadata": {},
    "source": [
-    "# 19. Which country had the lowest percentage of internet users in 2014? What was the percentage?"
+    "# 19. Which country had the lowest percentage of internet users in 2014? What was the percentage?\n",
+    "Dem. People's Rep. of Korea 0.0%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "579dd547",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               Dem. People's Rep. of Korea\n",
+       "Year                                         2014\n",
+       "GDP_Per_Capita                                NaN\n",
+       "Internet_Users_Pct                            0.0\n",
+       "Name: 7079, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2014.loc[gdp_internet_2014['Internet_Users_Pct'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2af5cf00",
+   "metadata": {},
+   "source": [
+    "# 20. Repeat for 2004 and 2009.\n",
+    "2004 max: Sweden 83.89 min:Dem. People's Rep. of Korea 0.0% \n",
+    "2009 max: Iceland 93%  min: Dem. People's Rep. of Korea 0.0%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fd3ac095",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                     Sweden\n",
+       "Year                          2004\n",
+       "GDP_Per_Capita        44496.023401\n",
+       "Internet_Users_Pct           83.89\n",
+       "Name: 6019, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2004.loc[gdp_internet_2004['Internet_Users_Pct'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "aa3aad23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country                    Iceland\n",
+       "Year                          2009\n",
+       "GDP_Per_Capita        48177.084123\n",
+       "Internet_Users_Pct            93.0\n",
+       "Name: 2630, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2009.loc[gdp_internet_2009['Internet_Users_Pct'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c3f99b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               Dem. People's Rep. of Korea\n",
+       "Year                                         2004\n",
+       "GDP_Per_Capita                                NaN\n",
+       "Internet_Users_Pct                            0.0\n",
+       "Name: 7088, dtype: object"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2004.loc[gdp_internet_2004['Internet_Users_Pct'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2b599170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               Dem. People's Rep. of Korea\n",
+       "Year                                         2009\n",
+       "GDP_Per_Capita                                NaN\n",
+       "Internet_Users_Pct                            0.0\n",
+       "Name: 7083, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2009.loc[gdp_internet_2009['Internet_Users_Pct'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f89a533a",
+   "metadata": {},
+   "source": [
+    "# 21. Which country had the highest gdp per capita in 2014? What was the gdp per capita?\n",
+    "Macao SAR, China 156514.13385"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1ab6828d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               Macao SAR, China\n",
+       "Year                              2014\n",
+       "GDP_Per_Capita            156514.13385\n",
+       "Internet_Users_Pct                 NaN\n",
+       "Name: 3721, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2014.loc[gdp_internet_2014['GDP_Per_Capita'].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ce6cb3c",
+   "metadata": {},
+   "source": [
+    "# 22. Which country had the lowest gdp per capita in 2014? What was the gdp per capita?\n",
+    "Central African Republic 822.610458"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "3e3cb128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country               Central African Republic\n",
+       "Year                                      2014\n",
+       "GDP_Per_Capita                      822.610458\n",
+       "Internet_Users_Pct                         NaN\n",
+       "Name: 1047, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_internet_2014.loc[gdp_internet_2014['GDP_Per_Capita'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4466ed40",
+   "metadata": {},
+   "source": [
+    "# 23. Create some scatterplots:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65c2263e",
+   "metadata": {},
+   "source": [
+    "# A)2004 Percent Using the Internet vs GDP Per Capita"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20bec7b4",
+   "id": "abbbeaa2",
    "metadata": {},
    "outputs": [],
    "source": []
